--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/hospital_system
+MONGO_URI=mongodb+srv://tanuj30:reddy@cluster.jf6nmsw.mongodb.net/hospitalDB
 JWT_SECRET=supersecretkey
